# djondb_csharp

./: .gitignore  CMakeLists.txt  LICENSE  README.md  README.txt  djondb_csharp.sln  release-windows.bat  update.bat
DBootStrapper/: CMakeLists.txt  DBootStrapper.cs  DBootStrapper.csproj
DBootStrapper/Properties/: AssemblyInfo.cs
Setup/: Setup.isl  Setup.isproj
SetupCSharp/: SetupCSharp.isl
SetupCSharp64/: SetupCSharp64.isl  SetupCSharp64.isproj
Test/: Program.cs  Test.csproj
Test/Properties/: AssemblyInfo.cs
TestApp/: Program.cs  Test.cs  TestApp.csproj
TestApp/Properties/: AssemblyInfo.cs
TestApp/References/: djondb_csharp.dll.metagen
TestApp/References/x64/: djondb_csharp.exp
djondb_csharp/: AssemblyInfo.cpp  BSONArrayObj.cpp  BSONArrayObj.cs  BSONArrayObj.h  BSONObj.cpp  BSONObj.cs  BSONObj.h  BsonParser.cpp  BsonParser.h  CMakeLists.txt  Command.cs  DjondbConnection.cpp  DjondbConnection.cs  DjondbConnection.h  DjondbConnectionManager.cpp  DjondbConnectionManager.h  DjondbCursor.cpp  DjondbCursor.cs  DjondbCursor.h  DjondbException.cs  Network.cs  ReadMe.txt  Sharp_Util.cpp  Sharp_Util.h  Stdafx.cpp  app.rc  djondb_csharp.csproj  djondb_csharp.sln  djondb_csharp.vcxproj  djondb_csharp.vcxproj.filters
djondb_csharp/Installer/: Installer.vdproj
djondb_csharp/Properties/: AssemblyInfo.cs
djondb_csharp/Setup/: Setup.vdproj
djondb_csharp/includes/: config.h  djon_error_codes.h  djondbconnection.h  djondbcursor.h  logger.h
