cmake_minimum_required (VERSION 2.6)

project (djondb-csharp)

#set(WIN32 true)
#set(LIBRARY_PREFIX "${PROJECT_SOURCE_DIR}/third_party/libs/")

SET(DJONDB_VERSION_MAJOR "3")
SET(DJONDB_VERSION_MINOR "5")
SET(DJONDB_VERSION_REVISION "51122")
SET(DJONDB_VERSION "${DJONDB_VERSION_MAJOR}.${DJONDB_VERSION_MINOR}.${DJONDB_VERSION_REVISION}")

#INCLUDE(InstallRequiredSystemLibraries)
SET(CPACK_PACKAGE_DESCRIPTION_SUMMARY "djondb c# 3.5 installer")
SET(CPACK_PACKAGE_VENDOR "djondb")
SET(CPACK_PACKAGE_DESCRIPTION_FILE "${PROJECT_SOURCE_DIR}/README.txt")
SET(CPACK_RESOURCE_FILE_README "${PROJECT_SOURCE_DIR}/README.txt")
SET(CPACK_RESOURCE_FILE_WELCOME "${PROJECT_SOURCE_DIR}/WELCOME.txt")
SET(CPACK_RESOURCE_FILE_LICENSE "${PROJECT_SOURCE_DIR}/LICENSE.txt")
SET(CPACK_PACKAGE_VERSION_MAJOR "${DJONDB_VERSION_MAJOR}")
SET(CPACK_PACKAGE_VERSION_MINOR "${DJONDB_VERSION_MINOR}")
SET(CPACK_PACKAGE_VERSION_PATCH "${DJONDB_VERSION_REVISION}")
SET(CPACK_PACKAGE_FILE_NAME "djondb_csharp-${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}.${CPACK_PACKAGE_VERSION_PATCH}")
SET(CPACK_PACKAGE_INSTALL_DIRECTORY "djondb c# ${CPACK_PACKAGE_VERSION_MAJOR}.${CPACK_PACKAGE_VERSION_MINOR}")

# There is a bug in NSI that does not handle full unix paths properly. Make
# sure there is at least one set of four (4) backlasshes.
#SET(CPACK_PACKAGE_ICON "${CMake_SOURCE_DIR}/Utilities/Release\\\\InstallIcon.bmp")
#SET(CPACK_NSIS_INSTALLED_ICON_NAME "bin\\\\MyExecutable.exe")
SET(CPACK_NSIS_DISPLAY_NAME "${CPACK_PACKAGE_INSTALL_DIRECTORY}")
SET(CPACK_NSIS_HELP_LINK "http:\\\\\\\\djondb.com")
SET(CPACK_NSIS_URL_INFO_ABOUT "http:\\\\\\\\djondb.com")
SET(CPACK_NSIS_CONTACT "info@djondb.com")
SET(CPACK_NSIS_MODIFY_PATH ON)

INCLUDE(CPack)

add_subdirectory(djondb_csharp) 
add_subdirectory(DBootStrapper) 
