
install (FILES RelWithDebInfo/Win32/djondb_csharp.dll libs/RelWithDebInfo/Win32/msvcp100.dll libs/RelWithDebInfo/Win32/msvcr100.dll libs/RelWithDebInfo/Win32/pthreadVC2.dll
	DESTINATION ./libs/x86
	PERMISSIONS OWNER_READ GROUP_READ WORLD_READ OWNER_WRITE OWNER_EXECUTE GROUP_EXECUTE WORLD_EXECUTE)

install (FILES RelWithDebInfo/x64/djondb_csharp.dll   libs/RelWithDebInfo/x64/msvcp100.dll   libs/RelWithDebInfo/x64/msvcr100.dll   libs/RelWithDebInfo/x64/pthreadVC2.dll
	DESTINATION ./libs/x64
	PERMISSIONS OWNER_READ GROUP_READ WORLD_READ OWNER_WRITE OWNER_EXECUTE GROUP_EXECUTE WORLD_EXECUTE)

#install(FILES ${CMAKE_INSTALL_SYSTEM_RUNTIME_LIBS} DESTINATION ./bin/test)
install (FILES RelWithDebInfo/Win32/djondb_csharp.dll 
	DESTINATION ./libs
	PERMISSIONS OWNER_READ GROUP_READ WORLD_READ OWNER_WRITE OWNER_EXECUTE GROUP_EXECUTE WORLD_EXECUTE)
